--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "mui-image": "^1.0.7",
     "notistack": "^2.0.8",
     "p-queue": "^8.0.1",
-    "pixi-live2d-display": "^0.4.0",
-    "pixi.js": "^6.5.10",
+    "pixi-live2d-display-mulmotion": "0.5.0-mm-2",
+    "pixi.js": "^7.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gtm-module": "^2.0.11",
